--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -32,8 +32,26 @@
         <a href="{{ site.github.zip_url }}" class="btn">Downloadaa .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
-      
-      <a href="https://editor.swagger.io/?url=https://raw.githubusercontent.com/RamakrishnanArun/swagger-trial/master/swagger.yaml" class="btn">Generate code</a>
+
+      <a href="/docs/index.html"
+         class="btn"
+         title="Read the documentation">
+         Documentation
+      </a>
+
+      <a href="/api-spec/index.html"
+         class="btn"
+         title="Read the IBM Marketplace Broker specification">
+         API specification
+      </a>
+
+      <a href="https://editor.swagger.io/?url=https://raw.githubusercontent.com/RamakrishnanArun/swagger-trial/master/swagger.yaml"
+         class="btn"
+         rel="noopener noreferrer"
+         target="_blank"
+         title="Use the Swagger Editor to generate server code in your preferred language">
+         Generate code!
+       </a>
     </header>
 
     <main id="content" class="main-content" role="main">
