--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -33,13 +33,13 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
 
-      <a href="/docs/index.html"
+      <a href="/swagger-trial/docs/index.html"
          class="btn"
          title="Read the documentation">
          Documentation
       </a>
 
-      <a href="/api-spec/index.html"
+      <a href="/swagger-trial/api-spec/index.html"
          class="btn"
          title="Read the IBM Marketplace Broker specification">
          API specification
